#3.2 Remover o funcionário João